Update crushName variable in messages array

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <script>
   const crushName = "YOUR NAME HERE";
   const messages = [
-    `Hey ${crushName} 🥺`,
+    `Hey ${Hishigzay} 🥺`,
     "Can I ask you something…",
     "Will you be my Valentine? 💕",
     "wow.",
